--- a/docs/0300-guides/200-load/100-tutorial.mdx
+++ b/docs/0300-guides/200-load/100-tutorial.mdx
@@ -103,7 +103,7 @@ If you used the autoload command, you can skip this section.
 This is done by running the following command:
 
 ```bash
-starlake infer-schema --input incoming/starbake --clean
+starlake infer-schema --input incoming/starbake/ --clean
 ```
 
 Your metadata `load` folder should now contain the folder `starbake` with following files:
