--- a/docs/0300-guides/100-extract/160-extract-schema-openapi.mdx
+++ b/docs/0300-guides/100-extract/160-extract-schema-openapi.mdx
@@ -1,4 +1,4 @@
-# Extracting Schema from OpenAPI
+# OpenAPI Schema Extraction
 
 This documentation outlines the process to extract Starlake schemas from OpenAPI definitions using a YAML configuration map.
 The instructions provide a comprehensive explanation of how to map OpenAPI routes and schemas to Starlake.
