snowflake tasks documentation

--- a/0400-reference/0100-extract/100-index.mdx
+++ b/0400-reference/0100-extract/100-index.mdx
@@ -6,4 +6,7 @@ sidebar_position: 1
 slug : /category/exract-reference
 ---
 
-cdcd
+Extracting dara from a database is straightforward with Starlake. 
+You can use the `extract` command to extract data from a database and save it to a file or a directory. 
+The command takes the following parameters:
+
