add julien hurault article

--- a/docs/0500-configuration/0110-connections.mdx
+++ b/docs/0500-configuration/0110-connections.mdx
@@ -150,7 +150,7 @@ CREATE OR REPLACE SECURITY INTEGRATION STARLAKE
   OAUTH_CLIENT_TYPE = 'CONFIDENTIAL'
   OAUTH_REDIRECT_URI = '<REDIRECT_URI>'
   OAUTH_ISSUE_REFRESH_TOKENS = TRUE
-  OAUTH_REFRESH_TOKEN_VALIDITY = 7776000; -- Valid for 90 days
+  OAUTH_REFRESH_TOKEN_VALIDITY = 7776000 -- Valid for 90 days
   OAUTH_USE_SECONDARY_ROLES = 'IMPLICIT'; 
 ```
 
