fix author for julian

--- a/blog/2025-04-22-from-data-engineer-to-yaml-engineer.mdx
+++ b/blog/2025-04-22-from-data-engineer-to-yaml-engineer.mdx
@@ -1,7 +1,8 @@
 ---
 title: From Data Engineer to YAML Engineer (Part II)
 date: 2025-04-22
-author: Julien Hurault
+autors:
+  - jhurault
 tags: [Data Engineering, YAML, dlt, SQLMesh, Rill, dbt, Starlake]
 url: https://juhache.substack.com/p/from-data-engineer-to-yaml-engineer
 ---
