--- a/blog/2025-05-16-how-declarative-data-stacks-enable-enterprise-scale.mdx
+++ b/blog/2025-05-16-how-declarative-data-stacks-enable-enterprise-scale.mdx
@@ -8,7 +8,7 @@ description: "Discover how declarative data stacks transform enterprise data inf
 tags: [Declarative Data Stack, Data Engineering, Starlake, YAML Configuration, Data Orchestration, Data Governance]
 ---
 
-![Sharding](/img/blog/sharding/declarative-data-stack-hero.png "How Declarative Data Stacks Enable Enterprise Scale")
+![hero](/img/blog/sharding/declarative-data-stack-hero.png "How Declarative Data Stacks Enable Enterprise Scale")
 
     Imagine building enterprise data infrastructure where you write 90% less code but deliver twice the value. This is the promise of declarative data stacks.
     
@@ -75,8 +75,7 @@ tags: [Declarative Data Stack, Data Engineering, Starlake, YAML Configuration, D
     ## Starlake: An Open Source Declarative Data Platform
     [Starlake](https://starlake.ai) gets you all the discussed benefits of a declarative data stack in one single platform, configurable by YAML. It offers a powerful [open-source solution](https://github.com/starlake-ai/starlake) to embrace declarative data engineering end-to-end.
     
-    ![image](https://hackmd.io/_uploads/Bylt4Aw1el.png)
-    
+    ![image](/img/blog/sharding/starlake-overview.png "Starlake overview")
     
     In a nutshell, Starlake is a comprehensive declarative data platform that:
     - Is based in France, is entirely open-source, and had its first [commit](https://github.com/starlake-ai/starlake/commit/e55c4ba34e988702bdc150225a8b88aed9bedc6a) on `May 21 2018`, but was created 20 years ago by [Hayssam Saleh](https://github.com/hayssams) ([LinkedIn](https://www.linkedin.com/in/hayssams/))
