remove 20 years ago

--- a/blog/2025-05-16-how-declarative-data-stacks-enable-enterprise-scale.mdx
+++ b/blog/2025-05-16-how-declarative-data-stacks-enable-enterprise-scale.mdx
@@ -78,7 +78,7 @@ tags: [Declarative Data Stack, Data Engineering, Starlake, YAML Configuration, D
     ![image](/img/blog/sharding/starlake-overview.png "Starlake overview")
     
     In a nutshell, Starlake is a comprehensive declarative data platform that:
-    - Is based in France, is entirely open-source, and had its first [commit](https://github.com/starlake-ai/starlake/commit/e55c4ba34e988702bdc150225a8b88aed9bedc6a) on `May 21 2018`, but was created 20 years ago by [Hayssam Saleh](https://github.com/hayssams) ([LinkedIn](https://www.linkedin.com/in/hayssams/))
+    - Is based in France, is entirely open-source, and had its first [commit](https://github.com/starlake-ai/starlake/commit/e55c4ba34e988702bdc150225a8b88aed9bedc6a) on `May 21 2018` by [Hayssam Saleh](https://github.com/hayssams) ([LinkedIn](https://www.linkedin.com/in/hayssams/)).
     - Runs on JVM (built with Scala) for cross-platform compatibility, bringing type safety and performance
     - Uses a YAML-based configuration approach (similar to how Terraform works for infrastructure)
     - Covers the entire data lifecycle: extract, load, transform, test, and orchestrate
