push data pipelines

--- a/blog/2025-01-08-introducing-starlake-ai.mdx
+++ b/blog/2025-01-08-introducing-starlake-ai.mdx
@@ -43,7 +43,7 @@ Starlake tackles these problems head-on, offering a declarative data pipeline so
 
 Starlake doesn’t just manage your data pipelines—it transforms them. Here’s how we compare:
 
-| Feature                    | Starlake.ai | Traditional ETL Tools |
+| Feature                    | Starlake.ai | Traditional Tools |
 | -------------------------- | ----------- | ---------------------- |
 | No-Code Ingestion          | ✅          | ❌                     |
 | Declarative Transformations| ✅          | ❌                     |
