--- a/docs/0300-guides/600-deploy/100-tutorial.mdx
+++ b/docs/0300-guides/600-deploy/100-tutorial.mdx
@@ -14,7 +14,7 @@ In your starlake docker container make the SL_ENV and SL_ROOT env variables are 
 
 
 
-## Orchestrating the ETL pipeline
+## Orchestrating the pipeline
 
 To run on your orchestrator, just copy the contents of the `metadta/dags/generated` folder to your orchestrator's DAGs folder.
 
