--- a/blog/2024-05-14-declarative.mdx
+++ b/blog/2024-05-14-declarative.mdx
@@ -26,7 +26,7 @@ This is the story of how a small team of developers crafted a platform that goes
 
 Back in 2015, at the helm of ebiznext, a boutique data engineering company, we faced a daunting challenge. Our client, a prominent entity in need of a robust big data solution, sought to harness the power of Hadoop and Spark. Despite our modest size (20 people), we dared to compete against industry giants with tenfold resources (100.000+ headcount).
 
-Our only chance to succeed was to innovate: we needed a data platform that could exponentially outperform the traditional ETL solutions pushed by our competitors. To build data pipelines these GUI based ETLs  require an effort that is proportional to the number and complexity of the sources.
+Our only chance to succeed was to innovate: we needed a data platform that could exponentially outperform the traditional solutions pushed by our competitors. To build data pipelines these GUI based ETLs  require an effort that is proportional to the number and complexity of the sources.
 
 Determined to disrupt this norm, we embarked on a quest to devise a DevOps friendly platform capable of lightning-fast data ingestion from any source, without the drawbacks of ETLs or specialized engineering skills.
 
