--- a/docs/0200-setup/100-index.mdx
+++ b/docs/0200-setup/100-index.mdx
@@ -75,7 +75,7 @@ The table below provides a comparison of these deployment options:
           <CardBody>
           </CardBody>
           <CardFooter>
-            <a href="/setup/starlake-setup">
+            <a href="/setup/starlake-core-setup">
               <button className='button button--secondary button--block'>Setup locally</button> 
             </a>
           </CardFooter>
