--- a/docs/0200-setup/400-starlake-dev.mdx
+++ b/docs/0200-setup/400-starlake-dev.mdx
@@ -1,6 +1,6 @@
 ---
 id: starlake-dev
-title: "Starlake Dev"
+title: "Starlake with Airflow / Dagster"
 description: "Get started with Starlake in minutes. Step-by-step installation guide for Docker, Linux, MacOS, and Windows with cloud integration examples."
 keywords: [starlake installation, data pipeline setup, etl quickstart, docker etl, cloud integration]
 ---
@@ -8,11 +8,11 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 :::tip
-Starlake Dev is a Docker-based setup for Starlake with Airflow or Dagster pre-configured.
+This is a Docker-based setup for Starlake with Airflow or Dagster pre-configured.
 
 :::
 
-Starlake Dev is ideal for developers and data engineers 
+This is ideal for developers and data engineers 
 who want to quickly set up a data pipeline environment without the need to separately install and configure Airflow or Dagster.
 Airflow and Dagster wxill be automatically installed and configured as part of the Starlake Dev setup.
 It provides a streamlined setup process, allowing you to focus on building and managing your data projects 
@@ -20,7 +20,7 @@ rather than dealing with infrastructure configurations.
 
 The core project is open source and can be found at [starlake-ai/starlake](https://github.com/starlake-ai/starlake)
 
-Starlake Dev may be installed on your own infrastructure, whether on your on-premises or in the cloud.
+Starlake may be installed on your own infrastructure, whether on your on-premises or in the cloud.
 
 You may install it on a server or a developer workstation using the docker-compose file provided to run the Starlake UI with Airflow or Dagster.
 Three installation options are available for the following platforms:
