--- a/docs/0300-guides/050-project-setup/050-bootstrap.mdx
+++ b/docs/0300-guides/050-project-setup/050-bootstrap.mdx
@@ -1,9 +1,9 @@
 ---
-id: getting-started-project-setup
+id: starlake-project-setup
 title: Create Your First Starlake Project
 description: Learn how to bootstrap a new Starlake project and configure your data warehouse connection for pipelines
 keywords: [starlake, data engineering, etl, bootstrap, project setup, data warehouse, bigquery, duckdb]
-sidebar_label: Project Setup
+sidebar_label: Create Project
 sidebar_position: 1
 ---
 
