--- a/docs/0200-setup/400-starlake-dev.mdx
+++ b/docs/0200-setup/400-starlake-dev.mdx
@@ -14,7 +14,7 @@ This is a Docker-based setup for Starlake with Airflow or Dagster pre-configured
 
 This is ideal for developers and data engineers 
 who want to quickly set up a data pipeline environment without the need to separately install and configure Airflow or Dagster.
-Airflow and Dagster wxill be automatically installed and configured as part of the Starlake Dev setup.
+Airflow and Dagster wxill be automatically installed and configured as part of the Starlake setup.
 It provides a streamlined setup process, allowing you to focus on building and managing your data projects 
 rather than dealing with infrastructure configurations.
 
