--- a/docs/0200-setup/200-starlake-core.mdx
+++ b/docs/0200-setup/200-starlake-core.mdx
@@ -275,9 +275,9 @@ Starlake Version 1.3.4
 
 ## Next Steps
 
-- [Create your first project](../guides/getting-started-project-setup)
-- [Load your first dataset](../guides/load/tutorial)
-- [Transform your data](../guides/transform/tutorial)
+- [Create your first project](/guides/project-setup/starlake-project-setup)
+- [Load your first dataset](/guides/load/tutorial)
+- [Transform your data](/guides/transform/tutorial)
 
 ## Troubleshooting
 
