--- a/docs/0300-guides/050-project-setup/050-bootstrap.mdx
+++ b/docs/0300-guides/050-project-setup/050-bootstrap.mdx
@@ -181,8 +181,8 @@ $ docker run -v `pwd`:/app/userguide \
 
 You're now ready to start working with Starlake! The next steps are:
 
-1. [Load data](load/tutorial) into your warehouse
-2. [Transform data](transform/tutorial) for analysis
+1. [Load data](../load/tutorial) into your warehouse
+2. [Transform data](../transform/tutorial) for analysis
 3. Run transformations from CLI and Airflow
 4. Generate project documentation
 
