--- a/docs/0300-guides/300-transform/100-tutorial.mdx
+++ b/docs/0300-guides/300-transform/100-tutorial.mdx
@@ -102,7 +102,7 @@ kpi.order_summary
     starbake.order_lines
 ```
 
-If you installed the [GraphViz tool](/setup/starlake-core-setup#prerequisites-4), you can produce the same graph in svg or png format using the following command:
+If you installed the [GraphViz tool](/setup/starlake-core-setup), you can produce the same graph in svg or png format using the following command:
 
 ```bash
 
