--- a/blog/2025-06-08-dbt-vs-starlake.mdx
+++ b/blog/2025-06-08-dbt-vs-starlake.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Dbt Fusion vs. Starlake: Why Openness Wins"
+title: "Dbt Fusion vs. Starlake AI: Why Openness Wins"
 slug: dbt-fusion-vs-starlake
 authors:
   - hayssams
