--- a/blog/2025-06-08-dbt-vs-starlake.mdx
+++ b/blog/2025-06-08-dbt-vs-starlake.mdx
@@ -46,7 +46,7 @@ Let’s break it down.
 - VSCode extension: Dbt Fusion's VSCode extension is free for up to 15 users, while Starlake's extension is always free.
 - SaaS Offering: Dbt Fusion is a SaaS offering, while Starlake is open-source with a **SaaS offering coming soon**.
 - MCP Server: Dbt Fusion's MCP Server requires a paid subscription for tools use, while Starlake provides a free full-fledged MCP Server for managing your data pipelines.
-
+- SQL Productivity tools: Dbt comes with DBT Canva, a paid product, at Starlake this is handled by Starlake Copilot through english prompts, which is free and open-source.
 
 
 | **Feature**                         | **Dbt Fusion**                             | **Starlake.ai**                                |
@@ -56,13 +56,14 @@ Let’s break it down.
 | **State-aware orchestration**       | Limited to Dbt Cloud                       | Yes on any orchestrator                        |
 | **Cost management**                 | via SDF Engine                             | via OSS JSQLParser/ JSQLTranspiler             |
 | **Lineage & governance**            | Paid tier                                  | Free                                           |
-| **Web-based visual editor**         | Paid tier                                  | Free                                           |
+| **Web-based visual editor**         | No                                         | Yes and always free                            |
 | **Platform integration**            | Paid tier                                  | Free                                           |
 | **Data seeding**                    | For tiny CSV-only                          | Production grade support for various formats with schema validation      |
 | **On-Premise / BYO Cloud**          | Not available                              | Yes                                            |
 | **VSCode extension**                | Paid after 15 users                        | Always free                                    |
-| **SaaS Offering**                   | Yes                                        | Coming soon                                    |
-| ** MCP Server**                     | Paid tier                                  | Yes (free)                                     |
+| **MCP Server**                      | Paid tier                                  | Yes (free)                                     |
+| **SQL Productivity tools**          | Paid product (DBT Canva)                   | Free and open-source (Starlake Copilot)        |
+| **SaaS Offering**                   | Yes                                        | Coming soon              |
 
 
 ### Strategy Matters As Much As Features
